added work experience

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none">Hello World!</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile-pic.jpg" alt="">
         </span>
@@ -72,7 +72,7 @@
           <p class="mb-5">Full Stack Developer with a educational policy and leadership development background. Adept at coordinating projects, facilitation, and working with diverse populations.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="https://github.com/Trantastic">
+              <a href="https://github.com/Trantastic" target="_blank">
                 <span class="fa-stack fa-lg" title="LinkedIn">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -80,7 +80,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/yvette-tran/">
+              <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank">
                 <span class="fa-stack fa-lg" title="Github">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -88,7 +88,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#" target="_blank">
+              <a href="img/resume.pdf" target="_blank">
                 <span class="fa-stack fa-lg" title="Resume">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-user fa-stack-1x fa-inverse"></i>
@@ -101,49 +101,38 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-5">Work Experience</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Leadership Development Coordinator</h3>
+              <div class="subheading mb-3">Californians for Justice</div>
+              <p>Led and designed a professional learning network to support school administrators to develop effective sustainable engagement plans for their stakeholders.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">October 2016 - August 2017</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Operations Associate</h3>
+              <div class="subheading mb-3">Californians for Justice</div>
+              <p>Coordinated and executed statewide logistics for campaign events and managed organization's technology needs with minimal to no supervision.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">August 2015 - January 2016</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Youth Organizer</h3>
+              <div class="subheading mb-3">Californians for Justice</div>
+              <p>Developed and implemented education reform strategy in East Side Union High School District. Managed a leadership development program for youth to develop their political analysis and organizing skills.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">April 2013 - May 2015</span>
             </div>
           </div>
 
@@ -211,7 +200,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>My background is in grassroots organizing in immigrant low-income communities. For a little over a decade, I worked to develop the critical thinking and leadership of youth of color and spent a year developing the leadership of educators. I am interested in developing practical applications that solve day to day challenges, especially challenges of low-income communities of color.</p>
-          <p class="mb-0">When I'm not coding, I love solo hiking on one of the many forests and trails in California. I'm also a sci-fi t.v. show/movie geek.</p>
+          <p class="mb-0">When I'm not coding, I love solo hiking on one of the many trails in California. And every year, I help plan a scholarship fundraiser for East Side San Jose students seeking higher education.</p>
         </div>
       </section>
 
