--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="subheading mb-5">San Jose, CA · (408) 230-1370 ·
             <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a>
           </div>
-          <p class="mb-5">Full Stack Developer with a educational policy and leadership development background. Adept at coordinating projects, facilitation, and working with diverse populations.</p>
+          <p class="mb-5">Yvette is a Full Stack Developer with over a decade worth of experience in educational policy and leadership development. Adept at coordinating projects, group facilitation and working with diverse populations, she's looking for opportunities to develop technologies that improve the quality of life for individuals and families.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://github.com/Trantastic" target="_blank">
@@ -100,6 +100,47 @@
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+        <div class="my-auto">
+          <h2 class="mb-5">Projects</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Tavola</h3>
+              <ul>
+                <li>Web app designed to provide easy immediate access to the medical information of students.</li> 
+                <li>Built with Node.js, JavaScript, Handlebars.js, MySQL, and Bootstrap</li>
+                <li>Role: Full Stack Developer</li>
+                <li><a href="https://github.com/Trantastic/tavola">https://github.com/Trantastic/tavola</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">NPR World News Scrapper</h3>
+              <ul>
+                <li>A website that collects NPR world news articles and displays them in an easy to read format. Articles can be saved for later and comments can be added.</li> 
+                <li>Built with Node.js, JavaScript, MongoDB, Cheerio, Bootstrap, and HTML</li>
+                <li>Role: Full Stack Developer</li>
+                <li><a href="https://github.com/Trantastic/npr-scrapper">https://github.com/Trantastic/npr-scrapper</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Find Your Nature</h3>
+              <ul>
+                <li>A web application where users can search for national park attractions in the United States. Search results display a brief description of the attraction and upon selecting an attraction, basic information is displayed such as a 7-day forecast and alerts.</li> 
+                <li>Built with JavaScript, HTML, Bootstrap, Firebase, Google Maps API, National Park Service API, Dark Sky API, and Air Quality Open Data API</li>
+                <li>Role: Front-End Developer</li>
+                <li><a href="https://github.com/Trantastic/Find-Your-Nature">https://github.com/Trantastic/Find-Your-Nature</a></li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
+
         <div class="my-auto">
           <h2 class="mb-5">Work Experience</h2>
 
@@ -173,7 +214,7 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <p>Node.JS • JavaScript • jQuery  • HTML • CSS • Bootstrap • MySQL • Sequelize • Handlebars MongoDB • React JS • Express</p>
+          <p>Node.JS • JavaScript • jQuery  • HTML • CSS • Bootstrap • Handlebars.js • MySQL • Sequelize • Firebase • MongoDB • React.js • Express • Git</p>
 
           <div class="subheading mb-3">Soft Skills</div>
           <ul class="fa-ul mb-0">
