--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
-          <!-- REMINDER: INCLUDE PDF OF RESUME -->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
@@ -88,7 +87,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="img/resume.pdf" target="_blank">
+              <a href="img/yt-resume.pdf" target="_blank">
                 <span class="fa-stack fa-lg" title="Resume">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-user fa-stack-1x fa-inverse"></i>
