--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="subheading mb-5">San Jose, CA · (408) 230-1370 ·
             <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a>
           </div>
-          <p class="mb-5">Yvette is a Full Stack Developer with over a decade worth of experience in educational policy and leadership development. Adept at coordinating projects, group facilitation and working with diverse populations, she's looking for opportunities to develop technologies that improve the quality of life for individuals and families.</p>
+          <p class="mb-5">Yvette is a MERN Stack Developer with over a decade worth of experience in educational policy and leadership development. Adept at coordinating projects, group facilitation and working with diverse populations, she's passionate about developing technologies that improve the quality of life for individuals and communities.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank">
@@ -147,7 +147,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Leadership Development Coordinator</h3>
               <div class="subheading mb-3">Californians for Justice</div>
-              <p>Led and designed a professional learning network to support school administrators to develop effective sustainable engagement plans for their stakeholders.</p>
+              <p>Led and designed a professional learning network to support school administrators to develop effective sustainable engagement plans for their stakeholders in 3 districts. Coached them through goal setting, planning, and troubleshooting their challenges.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2016 - August 2017</span>
@@ -158,7 +158,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Operations Associate</h3>
               <div class="subheading mb-3">Californians for Justice</div>
-              <p>Coordinated and executed statewide logistics for campaign events and managed organization's technology needs with minimal to no supervision.</p>
+              <p>Successfully managed and executed statewide logistics for campaign events and managed organization's technology needs with minimal to no supervision, totaling 300 participants.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2015 - January 2016</span>
@@ -169,7 +169,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Youth Organizer</h3>
               <div class="subheading mb-3">Californians for Justice</div>
-              <p>Developed and implemented education reform strategy in East Side Union High School District. Managed a leadership development program for youth to develop their political analysis and organizing skills.</p>
+              <p>Successfully designed and implemented education reform strategy in East Side Union High School District. Managed a leadership development program for youth to develop their political analysis and organizing skills that had the largest student leader base statewide.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2013 - May 2015</span>
@@ -213,7 +213,7 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <p>Node.JS • JavaScript • jQuery  • HTML • CSS • Bootstrap • Handlebars.js • MySQL • Sequelize • Firebase • MongoDB • React.js • Express • Git</p>
+          <p>Node.JS • JavaScript • jQuery  • HTML • CSS • Bootstrap • Handlebars.js • MySQL • Sequelize • Firebase • MongoDB • React.js • Express • Git • Bash</p>
 
           <div class="subheading mb-3">Soft Skills</div>
           <ul class="fa-ul mb-0">
@@ -239,7 +239,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>My background is in grassroots organizing in immigrant low-income communities. For a little over a decade, I worked to develop the critical thinking and leadership of youth of color and spent a year developing the leadership of educators. I am interested in developing practical applications that solve day to day challenges, especially challenges of low-income communities of color.</p>
+          <p>For a little over a decade, I worked to develop the critical thinking and leadership of youth of color and spent a year developing the leadership of educators. I am interested in developing practical applications that solve day to day challenges, especially challenges of low-income communities of color.</p>
           <p class="mb-0">When I'm not coding, I love solo hiking on one of the many trails in California. And every year, I help plan a scholarship fundraiser for East Side San Jose students seeking higher education.</p>
         </div>
       </section>
