updated education section

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of California Berkeley</h3>
-              <div class="subheading mb-3">Full Stack Web Development Program</div>
+              <div class="subheading mb-3">Full Stack Web Development Program. Created donzens of applications and accumulated at least 2,400 hours worth of coding time over the course of 3 months.</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">January 2018 - April 2018</span>
