--- a/index.html
+++ b/index.html
@@ -100,28 +100,28 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Projects</h2>
+          <h2 class="mb-5">Applications Built</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Tavola</h3>
+              <h3 class="mb-0">MediHelper</h3>
               <ul>
-                <li>Web app designed to provide easy immediate access to the medical information of students.</li> 
-                <li>Built with Node.js, JavaScript, Handlebars.js, MySQL, and Bootstrap</li>
-                <li>Role: Full Stack Developer</li>
-                <li><a href="https://github.com/Trantastic/tavola">https://github.com/Trantastic/tavola</a></li>
+                <li>An app designed to improve the process of caretaking by providing easy access and storage of information necessary for successful caretaking.</li> 
+                <li>Built with React, Javascript, Node.js, MongoDB, Bootstrap, & Twilio</li>
+                <li>Role: Created the parent component that houses the main features of the app. Coded the routes for user to access and store patients in the Mongo database.</li>
+                <li><a href="https://github.com/Trantastic/Medihelper" target="_blank">https://github.com/Trantastic/Medihelper</a></li>
               </ul>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">NPR World News Scrapper</h3>
+              <h3 class="mb-0">Tavola</h3>
               <ul>
-                <li>A website that collects NPR world news articles and displays them in an easy to read format. Articles can be saved for later and comments can be added.</li> 
-                <li>Built with Node.js, JavaScript, MongoDB, Cheerio, Bootstrap, and HTML</li>
-                <li>Role: Full Stack Developer</li>
-                <li><a href="https://github.com/Trantastic/npr-scrapper">https://github.com/Trantastic/npr-scrapper</a></li>
+                <li>Web application designed to provide easy immediate access to medical information of students.</li> 
+                <li>Built with Node.js, JavaScript, Handlebars.js, MySQL, & Bootstrap</li>
+                <li>Role: Created wireframe with input from team members. Wrote code for front end utilizing handlebars.js. Coded routes to access SQL database.</li>
+                <li><a href="https://github.com/Trantastic/tavola" target="_blank">https://github.com/Trantastic/tavola</a></li>
               </ul>
             </div>
           </div>
@@ -130,10 +130,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Find Your Nature</h3>
               <ul>
-                <li>A web application where users can search for national park attractions in the United States. Search results display a brief description of the attraction and upon selecting an attraction, basic information is displayed such as a 7-day forecast and alerts.</li> 
-                <li>Built with JavaScript, HTML, Bootstrap, Firebase, Google Maps API, National Park Service API, Dark Sky API, and Air Quality Open Data API</li>
-                <li>Role: Front-End Developer</li>
-                <li><a href="https://github.com/Trantastic/Find-Your-Nature">https://github.com/Trantastic/Find-Your-Nature</a></li>
+                <li>Users can search for national park attractions in the United States. Search results display a brief description of the attraction, as well as, weather forecasts and alerts.</li>
+                <li>Role: Created the comment feature, allowing users to write comments for the national park attraction they visited, timestamps it, and stores it into Google’s Firebase database.</li>
+                <li><a href="https://github.com/Trantastic/Find-Your-Nature" target="_blank">https://github.com/Trantastic/Find-Your-Nature</a></li>
               </ul>
             </div>
           </div>
@@ -147,7 +146,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Leadership Development Coordinator</h3>
               <div class="subheading mb-3">Californians for Justice</div>
-              <p>Led and designed a professional learning network to support school administrators to develop effective sustainable engagement plans for their stakeholders in 3 districts. Coached them through goal setting, planning, and troubleshooting their challenges.</p>
+              <p>Designed and managed a professional learning network to support school administrators to develop effective sustainable engagement plans for their stakeholders in 3 districts. Coached them through goal setting, planning, and troubleshooting their challenges.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2016 - August 2017</span>
@@ -213,9 +212,11 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <p>Node.JS • JavaScript • jQuery  • HTML • CSS • Bootstrap • Handlebars.js • MySQL • Sequelize • Firebase • MongoDB • React.js • Express • Git • Bash</p>
+          <p>React.js • Node.js • JavaScript • jQuery  • HTML • CSS • Bootstrap • Handlebars.js <br> • MySQL • Firebase • MongoDB • Express • Git • Bash</p>
+          
+          <br>
 
-          <div class="subheading mb-3">Soft Skills</div>
+          <div class="subheading mb-3">Strengths</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
@@ -228,10 +229,13 @@
               Critical Thinking</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Flexibility</li>
+              Adaptability</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Meeting Facilitation</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Communication</li>
           </ul>
         </div>
       </section>
@@ -240,7 +244,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>For a little over a decade, I worked to develop the critical thinking and leadership of youth of color and spent a year developing the leadership of educators. I am interested in developing practical applications that solve day to day challenges, especially challenges of low-income communities of color.</p>
-          <p class="mb-0">When I'm not coding, I love solo hiking on one of the many trails in California. And every year, I help plan a scholarship fundraiser for East Side San Jose students seeking higher education.</p>
+          <p class="mb-0">When I'm not coding, I love solo hiking on one of the many trails in California. And every year, I help plan and fundraise for a scholarship for East Side San Jose high school students seeking higher education.</p>
         </div>
       </section>
 
