--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
 
         <div class="my-auto">
-          <h2 class="mb-5">Work Experience</h2>
+          <h2 class="mb-5">Professional Experience</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
