--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Leadership Development Coordinator</h3>
               <div class="subheading mb-3">Californians for Justice</div>
-              <p>Designed and managed a professional learning network to support school administrators to develop effective sustainable engagement plans for their stakeholders in 3 districts. Coached them through goal setting, planning, and troubleshooting their challenges.</p>
+              <p>Designed and managed a professional learning network to support school administrators to develop effective sustainable engagement plans for their stakeholders in 3 districts. Coached them through goal setting, planning, and troubleshooting their challenges. More than doubled the number of participants for year 2 of network.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2016 - August 2017</span>
@@ -186,7 +186,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of California Berkeley</h3>
-              <div class="subheading mb-3">Full Stack Web Development Program. Created donzens of applications and accumulated at least 2,400 hours worth of coding time over the course of 3 months.</div>
+              <div class="subheading mb-3">Full Stack Web Development Program. Created donzens of applications and accumulated 900 hours worth of coding time over the course of 3 months.</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">January 2018 - April 2018</span>
@@ -211,8 +211,8 @@
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <p>React.js • Node.js • JavaScript • jQuery  • HTML • CSS • Bootstrap • Handlebars.js <br> • MySQL • Firebase • MongoDB • Express • Git • Bash</p>
+          <div class="subheading mb-3">Programming Languages &amp; Technologies</div>
+          <p>React.js • Node.js • JavaScript • jQuery  • HTML • CSS • Bootstrap • Handlebars.js <br> • MySQL • MongoDB • Express • Git • Bash</p>
           
           <br>
 
@@ -220,7 +220,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Project Coordination</li>
+              Project Management</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Team Management &amp; Coordination</li>
