--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
           <h1 class="mb-0">Yvette
             <span class="text-primary">Tran</span>
           </h1>
-          <div class="subheading mb-5">San Jose, CA · (408) 230-1370 ·
+          <div class="subheading mb-5">United States · (408) 230-1370 ·
             <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a>
           </div>
-          <p class="mb-5">Yvette is a MERN Stack Developer with over a decade worth of experience in educational policy and leadership development. Adept at coordinating projects, group facilitation and working with diverse populations, she's passionate about developing technologies that improve the quality of life for individuals and communities.</p>
+          <p class="mb-5">Yvette is a MERN Stack Developer with over a decade worth of experience in educational policy and leadership development. Adept at coordinating projects, group facilitation, communication and working with diverse populations, she's passionate about developing technologies that improve the quality of life for individuals and communities.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank">
