--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="subheading mb-5">United States · (408) 230-1370 ·
             <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a>
           </div>
-          <p class="mb-5">Yvette is a MERN Stack Developer with over a decade worth of experience in educational policy and leadership development. Adept at coordinating projects, group facilitation, communication and working with diverse populations, she's passionate about developing technologies that improve the quality of life for individuals and communities.</p>
+          <p class="mb-5">Yvette is a MERN Stack Developer with over a decade worth of experience in educational policy and leadership development. Adept at coordinating projects, group facilitation, communication and working with diverse populations, she's passionate about developing accessible and intuitive technologies that improve the quality of life for individuals and communities.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank">
@@ -106,7 +106,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">MediHelper</h3>
               <ul>
-                <li>An app designed to improve the process of caretaking by providing easy access and storage of information necessary for successful caretaking.</li> 
+                <li>Designed to improve the process of caretaking by providing easy access and storage of information necessary for successful caretaking.</li> 
                 <li>Built with React, Javascript, Node.js, MongoDB, Bootstrap, & Twilio</li>
                 <li>Role: Created the parent component that houses the main features of the app. Coded the routes for user to access and store patients in the Mongo database.</li>
                 <li><a href="https://github.com/Trantastic/Medihelper" target="_blank">https://github.com/Trantastic/Medihelper</a></li>
@@ -244,7 +244,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>For a little over a decade, I worked to develop the critical thinking and leadership of youth of color and spent a year developing the leadership of educators. I am interested in developing practical applications that solve day to day challenges, especially challenges of low-income communities of color.</p>
-          <p class="mb-0">When I'm not coding, I love solo hiking on one of the many trails in California. And every year, I help plan and fundraise for a scholarship for East Side San Jose high school students seeking higher education.</p>
+          <p class="mb-0">When I'm not coding, I love solo hiking on one of the many trails in California. And every year, I raise money for a scholarship for East Side San Jose high school students seeking higher education.</p>
         </div>
       </section>
 
