--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="img/yt-resume.pdf" target="_blank">
+              <a href="img/yvette-tran.pdf" target="_blank">
                 <span class="fa-stack fa-lg" title="Resume">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-user fa-stack-1x fa-inverse"></i>
