fixed scroll view offset

--- a/index.html
+++ b/index.html
@@ -39,41 +39,41 @@
 	<div class="container">
 
 		<!-- About Me -->
-		<div class="row slide-up" id="about">
+		<div class="row" id="about">
 			<div class="col-md-4">
-				<figure class="m-5 text-center">
+				<figure class="m-5 text-center slide-up">
 					<img id="curious" src="./img/curious.svg" alt="Magnify Glass">
 					<figcaption class="about-me-fig">Naturally Curious, Versed In Solution-Based Thinking</figcaption>
 				</figure>
 			</div>
 			<div class="col-md-4">
-				<figure class="m-5 text-center">
+				<figure class="m-5 text-center slide-up">
 					<img id="communication" src="./img/communication.svg" alt="Chat Bubble">
-					<figcaption class="slide-up about-me-fig">Excellent Communicator, Trained In Non-Violent Communication</figcaption>
+					<figcaption class="about-me-fig">Excellent Communicator, Trained In Non-Violent Communication</figcaption>
 				</figure>
 			</div>
 			<div class="col-md-4">
-				<figure class="m-5 text-center">
+				<figure class="m-5 text-center slide-up">
 					<img id="teamwork" src="./img/teamwork.svg" alt="Teamwork">
 					<figcaption class="about-me-fig">Experienced Working In and Leading Diverse Teams</figcaption>
 				</figure>
 			</div>
 		</div>
-		<div class="row mt-3 slide-up">
-			<div class="col-md-6">
+		<div class="row mt-3">
+			<div class="col-md-6 slide-up">
 				<p id="intro">Hi there! I'm Yvette a software engineer from San Jose, California.
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 slide-up">
 				<p id="bio">I'm a life-long learner who enjoys transforming needs into actions and breaking down complex problems into meaningful solutions. I'm passionate about building accessible technologies for diverse communities. Feel free to say hello and drop me a line.</p>
 			</div>
 		</div>
 
 		<!-- Portfolio -->
-		<div class="row slide-up" id="portfolio">
-			<div class="col-md-2">
+		<div class="row" id="portfolio">
+			<div class="col-md-2 slide-up">
 				<h3 id="tech-header">Technology</h3>
 			</div>
-			<div class="col-md-2 tech-stack">
+			<div class="col-md-2 slide-up tech-stack">
 				<ul>
 					<li>JavaScript</li>
 					<li>Node.js</li>
@@ -81,14 +81,14 @@
 					<li>CSS</li>
 				</ul>
 			</div>
-			<div class="col-md-2 tech-stack">
+			<div class="col-md-2 slide-up tech-stack">
 				<ul>
 					<li>React</li>
 					<li>Bootstrap</li>
 					<li>jQuery</li>
 				</ul>
 			</div>
-			<div class="col-md-2 tech-stack">
+			<div class="col-md-2 slide-up tech-stack">
 				<ul>
 					<li>Git/Github</li>
 					<li>Bash</li>
