updated app links

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		</div>
 		<div class="row mb-5 slide-up">
 			<div class="col-md-3 mr-5">
-				<a href="#"><img class="border border-secondary" id="portfolio-img" src="./img/medihelper.png"></a>
+				<a href="https://github.com/Trantastic/MediHelper" target="_blank"><img class="border border-secondary" id="portfolio-img" src="./img/medihelper.png"></a>
 			</div>
 			<div class="col-md-7">
 				<p id="app-descr">Improves the process of caretaking by providing easy access and storage of patient's medical data necessary for successful caretaking.</p>
@@ -112,7 +112,7 @@
 		</div>
 		<div class="row mb-5 slide-up">
 			<div class="col-md-3 mr-5">
-				<a href="#"><img class="border border-secondary" id="portfolio-img" src="./img/tavola.png"></a>
+				<a href="https://github.com/Trantastic/tavola" target="_blank"><img class="border border-secondary" id="portfolio-img" src="./img/tavola.png"></a>
 			</div>
 			<div class="col-md-7">
 				<p id="app-descr">Provides easy immediate access to medical information of students.</p>
@@ -120,7 +120,7 @@
 		</div>
 		<div class="row mb-5 slide-up">
 			<div class="col-md-3 mr-5">
-				<a href="#"><img class="border border-secondary" id="portfolio-img" src="./img/findyournature.png"></a>
+				<a href="https://github.com/Trantastic/Find-Your-Nature" target="_blank"><img class="border border-secondary" id="portfolio-img" src="./img/findyournature.png"></a>
 			</div>
 			<div class="col-md-7 last">
 				<p id="app-descr">Searches for national park attractions in the United States. Results display a brief description of the attraction, weather forecasts & alerts.</p>
