--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<p id="intro">Hi there! I'm Yvette a software engineer from San Jose, California.
 			</div>
 			<div class="col-md-6 slide-up">
-				<p id="bio">I'm a life-long learner who enjoys transforming needs into actions and breaking down complex problems into meaningful solutions. I'm passionate about building accessible technologies for diverse communities. Feel free to say hello and drop me a line.</p>
+				<p id="bio">I'm a life-long learner who's experienced in (and enjoys) transforming needs into actions and breaking down complex problems into meaningful solutions. I'm passionate about building accessible technologies for diverse communities. Feel free to say hello and drop me a line.</p>
 			</div>
 		</div>
 
@@ -107,7 +107,7 @@
 				<a href="https://github.com/Trantastic/MediHelper" target="_blank"><img class="border border-secondary" id="portfolio-img" src="./img/medihelper.png"></a>
 			</div>
 			<div class="col-md-7">
-				<p id="app-descr">Improves the process of caretaking by providing easy access and storage of patient's medical data necessary for successful caretaking.</p>
+				<p id="app-descr">Improves the process of caretaking by providing easy access and storage of patient's medical data necessary for successful caretaking. Built with React and MongoDB.</p>
 			</div>
 		</div>
 		<div class="row mb-5 slide-up">
@@ -115,7 +115,7 @@
 				<a href="https://github.com/Trantastic/tavola" target="_blank"><img class="border border-secondary" id="portfolio-img" src="./img/tavola.png"></a>
 			</div>
 			<div class="col-md-7">
-				<p id="app-descr">Provides easy immediate access to medical information of students.</p>
+				<p id="app-descr">Provides easy immediate access to medical information of students. Built with HandlebarJS and MySQL.</p>
 			</div>
 		</div>
 		<div class="row mb-5 slide-up">
@@ -123,7 +123,7 @@
 				<a href="https://github.com/Trantastic/Find-Your-Nature" target="_blank"><img class="border border-secondary" id="portfolio-img" src="./img/findyournature.png"></a>
 			</div>
 			<div class="col-md-7 last">
-				<p id="app-descr">Searches for national park attractions in the United States. Results display a brief description of the attraction, weather forecasts & alerts.</p>
+				<p id="app-descr">Searches for national park attractions in the United States. Results display a brief description of the attraction, weather forecasts & alerts. Built with Boostrap and Firebase</p>
 			</div>
 		</div>
 		<p id="spacing"></p>
