deleted content of files

--- a/index.html
+++ b/index.html
@@ -1,161 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Yvette Tran | Software Engineer</title>
-	<link rel="stylesheet" type="text/css" href="./style.css">
-	<!-- Bootstrap v4-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/wave.png">
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-</head>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title></title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="">
+	</head>
+	<body>
 
-<body data-spy="scroll" data-target="#navbar-scroll" data-offset="1">
-	<!-- Navbar -->
-	<nav id="navbar-scroll" class="navbar fixed-top navbar-expand-lg navbar-light slide-up">
-	  <img class="ml-2" id="headshot" src="./img/headshot.png">
-	  <a class="navbar-brand ml-4" href="#about">YVETTE TRAN</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNav">
-	    <ul class="navbar-nav ml-auto">
-	      <li class="nav-item mr-4">
-	        <a class="nav-link" href="#about">ABOUT</a>
-	      </li>
-	      <li class="nav-item mr-4">
-	        <a class="nav-link" href="#portfolio">PORTFOLIO</a>
-	      </li>
-	      <li class="nav-item mr-4">
-	        <a class="nav-link" href="#contact">CONTACT</a>
-	      </li>
-	      <li class="nav-item mr-4">
-	        <a class="nav-link" href="./img/yvette tran resume.pdf" target="_blank">RESUME</a>
-	      </li>
-	    </ul>
-	  </div>
-	</nav>
-	<div class="container">
-
-		<!-- About Me -->
-		<div class="row" id="about">
-			<div class="col-md-4">
-				<figure class="m-5 text-center slide-up">
-					<img id="curious" src="./img/curious.svg" alt="Magnify Glass">
-					<figcaption class="about-me-fig">Naturally Curious, Versed In Solution-Based Thinking</figcaption>
-				</figure>
-			</div>
-			<div class="col-md-4">
-				<figure class="m-5 text-center slide-up">
-					<img id="communication" src="./img/communication.svg" alt="Chat Bubble">
-					<figcaption class="about-me-fig">Excellent Communicator, Trained In Non-Violent Communication</figcaption>
-				</figure>
-			</div>
-			<div class="col-md-4">
-				<figure class="m-5 text-center slide-up">
-					<img id="teamwork" src="./img/teamwork.svg" alt="Teamwork">
-					<figcaption class="about-me-fig">Experienced Working In and Leading Diverse Teams</figcaption>
-				</figure>
-			</div>
-		</div>
-		<div class="row mt-3">
-			<div class="col-md-6 slide-up">
-				<p id="intro">Hi there! I'm Yvette a software engineer from San Jose, California.
-			</div>
-			<div class="col-md-6 slide-up">
-				<p id="bio">I'm a life-long learner who's experienced in (and enjoys) transforming needs into actions and breaking down complex problems into meaningful solutions. I'm passionate about building accessible technologies for diverse communities. Feel free to say hello and drop me a line.</p>
-			</div>
-		</div>
-
-		<!-- Portfolio -->
-		<div class="row" id="portfolio">
-			<div class="col-md-2 slide-up">
-				<h3 id="tech-header">Technology</h3>
-			</div>
-			<div class="col-md-2 slide-up tech-stack">
-				<ul>
-					<li>JavaScript</li>
-					<li>Node.js</li>
-					<li>HTML</li>
-					<li>CSS</li>
-				</ul>
-			</div>
-			<div class="col-md-2 slide-up tech-stack">
-				<ul>
-					<li>React</li>
-					<li>Bootstrap</li>
-					<li>jQuery</li>
-				</ul>
-			</div>
-			<div class="col-md-2 slide-up tech-stack">
-				<ul>
-					<li>Git/Github</li>
-					<li>Bash</li>
-					<li>MySQL</li>
-					<li>MongoDB</li>
-				</ul>
-			</div>
-		</div>
-		<div class="row mb-5 slide-up">
-			<div class="col-md-12">
-				<h3 id="apps-header">Apps Built</h3>
-			</div>
-		</div>
-		<div class="row mb-5 slide-up">
-			<div class="col-md-3 mr-5">
-				<a href="https://github.com/Trantastic/MediHelper" target="_blank"><img class="border border-secondary" id="portfolio-img" src="./img/medihelper.png"></a>
-			</div>
-			<div class="col-md-7">
-				<p id="app-descr">Improves the process of caretaking by providing easy access and storage of patient's medical data necessary for successful caretaking. Built with React and MongoDB.</p>
-			</div>
-		</div>
-		<div class="row mb-5 slide-up">
-			<div class="col-md-3 mr-5">
-				<a href="https://github.com/Trantastic/tavola" target="_blank"><img class="border border-secondary" id="portfolio-img" src="./img/tavola.png"></a>
-			</div>
-			<div class="col-md-7">
-				<p id="app-descr">Provides easy immediate access to medical information of students. Built with HandlebarJS and MySQL.</p>
-			</div>
-		</div>
-		<div class="row mb-5 slide-up">
-			<div class="col-md-3 mr-5">
-				<a href="https://github.com/Trantastic/Find-Your-Nature" target="_blank"><img class="border border-secondary" id="portfolio-img" src="./img/findyournature.png"></a>
-			</div>
-			<div class="col-md-7 last">
-				<p id="app-descr">Searches for national park attractions in the United States. Results display a brief description of the attraction, weather forecasts & alerts. Built with Boostrap and Firebase</p>
-			</div>
-		</div>
-		<p id="spacing"></p>
-	</div>
-
-	<div class="container-fluid" id="contact">
-		<!-- Contact -->
-		<div class="row slide-up">
-			<div class="col-md-12 text-center contact-header">
-				<h3>Check Out My GitHub: <a href="https://github.com/Trantastic" target="_blank"><img id="github-icon"src="./img/github.svg" alt="GitHub Logo"></a></h3>
-				<h3>Connect With Me: <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank"><img id="linkedin-icon" src="./img/linkedin.svg" alt="LinkedIn Icon"></a></h3>
-				<h3>Or</h3>
-				<h3>Email Me: <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a></h3>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<footer class="ml-1">
-					<p>Coded and Designed by Yvette Tran 2018</p>
-				</footer>
-			</div>
-		</div>
-	</div>
-
-	<!-- ScrollReveal -->
-	<script src="https://unpkg.com/scrollreveal"></script>
-	<!-- Bootstrap v4 -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	<!-- index.js file -->
-	<script src="./index.js"></script>
-
-</body>
+		
+		<script src="" async defer></script>
+	</body>
 </html>
