added about section

--- a/resume.html
+++ b/resume.html
@@ -28,12 +28,7 @@
 			</div>
 		</nav>
 
-		<div id="profile-content">
-			<img src="./img/profile.jpeg" alt="Yvette's profile picture with her dog" id="profile-pic">
-
-			<h1 id="intro">Hi there! 👋</h1>
-			<p id="bio">I'm Yvette, a QA with over 4 years of experience. I specialize in designing and executing testing strategies and accessibility testing. I enjoy learning how things work and ensuring quality products are delivered. I'm looking for remote opportunties where I can continue to grow my technical skills.</p>
-		</div>
+        <h1>Resume</h1>
     	
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   	</body>
