--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
   	<body>
 		<nav class="navbar navbar-expand-lg bg-body-tertiary">
 			<div class="container-fluid">
-			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			  </button>
 			  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav mx-auto">
+				<ul class="navbar-nav mx-auto nav-underline">
 				  <li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="./index.html">About</a>
+					<a class="nav-link" href="./index.html">About</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="./resume.html">Resume</a>
