--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 
 			<h1 id="intro">Hi there! 👋</h1>
 			<p id="bio">I'm Yvette, a QA with over 4 years of experience. I specialize in designing and executing testing strategies and accessibility testing. I enjoy learning how things work and ensuring quality products are delivered. I'm looking for remote opportunties where I can continue to grow my technical skills.</p>
+			<p>You can contact me at yvettetran@gmail.com</p>
+
+			<ul id="social-media">
+				<li>
+					<a href="https://github.com/Trantastic" target="_blank"><img src="./img/github.svg"></a>
+				</li>
+				<li>
+					<a href="https://www.linkedin.com/in/yvette-tran/" target="_blank"><img src="./img/linkedin.svg"></a>
+				</li>
+			</ul>
 		</div>
     	
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
