--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar-main">
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -42,47 +42,48 @@
         </div>
       </div>
     </nav>
+    
+    <div data-spy="scroll" data-target="#navbar-main" data-offset="0">
+      <div id="profile-content">
+        <img
+          src="./img/profile.jpeg"
+          alt="Yvette's profile picture with her dog"
+          id="profile-pic"
+        />
 
-    <div id="profile-content">
-      <img
-        src="./img/profile.jpeg"
-        alt="Yvette's profile picture with her dog"
-        id="profile-pic"
-      />
+        <h1 id="intro">Hi there! 👋</h1>
+        <p id="bio">
+          I'm Yvette, a QA with over 4 years of experience. I specialize in
+          designing and executing testing strategies and accessibility testing. I
+          enjoy learning how things work and ensuring quality products are
+          delivered. I'm looking for remote opportunties where I can continue to
+          grow my technical skills.
+        </p>
+        <p>You can contact me at yvettetran@gmail.com</p>
 
-      <h1 id="intro">Hi there! 👋</h1>
-      <p id="bio">
-        I'm Yvette, a QA with over 4 years of experience. I specialize in
-        designing and executing testing strategies and accessibility testing. I
-        enjoy learning how things work and ensuring quality products are
-        delivered. I'm looking for remote opportunties where I can continue to
-        grow my technical skills.
-      </p>
-      <p>You can contact me at yvettetran@gmail.com</p>
+        <ul id="social-media">
+          <li>
+            <a href="https://github.com/Trantastic" target="_blank">
+              <img src="./img/github.svg"/>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank">
+              <img src="./img/linkedin.svg"/>
+            </a>
+          </li>
+        </ul>
+      </div>
 
-      <ul id="social-media">
-        <li>
-          <a href="https://github.com/Trantastic" target="_blank">
-            <img src="./img/github.svg"/>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank">
-            <img src="./img/linkedin.svg"/>
-          </a>
-        </li>
-      </ul>
+      <div id="experience">
+        <h1>experience stuff goes here</h1>
+      </div>
+
+      <div id="samples">
+        <h1>test samples go here</h1>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+      </div>
     </div>
-
-    <div id="experience">
-      <h1>experience stuff goes here</h1>
-    </div>
-
-    <div id="samples">
-      <h1>test samples go here</h1>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-    </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
