--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           I'm Yvette, a QA with over 4 years of experience. I specialize in
           designing and executing testing strategies and accessibility testing. I
           enjoy learning how things work and ensuring quality products are
-          delivered. I'm looking for remote opportunties where I can continue to
+          delivered. I'm looking for remote opportunities where I can continue to
           grow my technical skills.
         </p>
         <p>You can contact me at yvettetran@gmail.com</p>
