added styling to experience section

--- a/index.html
+++ b/index.html
@@ -80,20 +80,22 @@
         <p>View my full resume <a href="https://docs.google.com/document/d/1Y2-IUJEw41kBBJa7l_dOZToA0JOnRVE4DkVvwYJ63Jw/edit?usp=sharing">here</a>.</p>
         
         <h3>Indeed.com, Remote</h2>
-        <h4>QA Team Lead, Oct 2022 - Mar 2023</h4>
+        <h4 class="job-title">QA Team Lead, Oct 2022 - Mar 2023</h4>
           <p>Designed and executed test plans. Coordinated testing efforts with designers, engineers, and product managers. Implement QA processes to improve product quality and team efficiency.</p>
-          <p>Skills: designing test strategies, end to end testing, project management, quality management</p>
-        <h4>QA Engineer II, Dec 2020 - Oct 2022 </h4>
+          <p class="skills">Skills: <p>designing test strategies, end to end testing, project management, quality management</p>
+        <h4 class="job-title">QA Engineer II, Dec 2020 - Oct 2022 </h4>
           <p>Investigated reported defects and collaborated with product team fix them. Worked with engineers to automate manual test cases.</p>
-          <p>Skills: test design, communication, debugging</p>
-        <h4>QA Engineer I, Dec 2018 - Dec 2020</h4>
+          <p class="skills">Skills: test design, communication, debugging</p>
+        <h4 class="job-title">QA Engineer I, Dec 2018 - Dec 2020</h4>
           <p>Owned manual testing for web and mobile changes. Utilized Chrome DevTools, Android Studio, and Xcode for testing. Wrote detailed test reports. Created and maintained numerous pages of technical documentation.</p>
-          <p>Skills: regression testing, functionality testing, smoke testing, documentation</p>
+          <p class="skills">Skills: regression testing, functionality testing, smoke testing, documentation</p>
 
       </div>
 
       <div id="samples">
         <h1>Examples of my work</h1>
+        <p>Technical Documentation</p>
+        <p>Test Case Design</p>
       </div>
     </div>
     
