deleted stray p tag

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3>Indeed.com, Remote</h2>
         <h4 class="job-title">QA Team Lead, Oct 2022 - Mar 2023</h4>
           <p>Designed and executed test plans. Coordinated testing efforts with designers, engineers, and product managers. Implement QA processes to improve product quality and team efficiency.</p>
-          <p class="skills">Skills: <p>designing test strategies, end to end testing, project management, quality management</p>
+          <p class="skills">Skills: designing test strategies, end to end testing, project management, quality management</p>
         <h4 class="job-title">QA Engineer II, Dec 2020 - Oct 2022 </h4>
           <p>Investigated reported defects and collaborated with product team fix them. Worked with engineers to automate manual test cases.</p>
           <p class="skills">Skills: test design, communication, debugging</p>
