--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
               <a class="nav-link" href="#experience">Experience</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#samples">
-                Testing Samples
-              </a>
+              <a class="nav-link" href="#samples">Testing Samples</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
             </li>
           </ul>
         </div>
@@ -173,6 +174,13 @@
                 </ul>
             </div>
           </div>
+      </div>
+      
+      <div style="padding-bottom:10%">
+        <h2 id="projects">Projects</h2>
+
+        <p>Chrome extension that highlights selected text. <a href="https://github.com/Trantastic/highlighter">Link to Github repo.</a></p>
+        <img src="img/highlighting.gif"/>
       </div>
     </div>
     
